data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4218.wast
;; 7. **Test Description**:     Create a module with a loop containing a `block` instruction. Inside the block, place a `call_indirect` instruction followed by a nested loop that contains another `call_indirect`. Insert `br_table` at various depths of the nested structures.    **Constraint**: Verify that control flow between the nested loops and block is accurately maintained and that both `call_indirect` calls handle their type checks without causing traps.    **Relation to Mismanagement of Block Nesting**: This test ensures that nested loops and blocks correctly manage control flow and function calls, avoiding incorrect exits or traps due to type mismatches.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (type (func (param i32 i32) (result i32)))
    (table 2 funcref)
    (elem (i32.const 0) $a)
    (elem (i32.const 1) $b)
    (func $a (param i32) (result i32)
      (i32.add (local.get 0) (i32.const 1))
    )
    (func $b (param i32 i32) (result i32)
      (i32.add (local.get 0) (local.get 1))
    )
    (func (param i32) (result i32)
      (block (result i32)
        (call_indirect (type 0) (local.get 0) (i32.const 0))
        (loop (result i32)
          (call_indirect (type 1) (local.get 0) (local.get 0) (i32.const 1))
          (br_table 0 1 (local.get 0))
        )
      )
    )
  )
  "type mismatch"
)